--- a/extension/src/option.html
+++ b/extension/src/option.html
@@ -8,21 +8,32 @@
     <title>Document</title>
 </head>
 <style type="text/css">
+    html {
+        width: 100%;
+        height: 100%;
+    }
+
     body {
         background-color: ghostwhite;
-        height: 10rem;
-        width: 20rem;
+        height: 100%;
+        width: 100%;
         border-radius: 1rem;
-
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 </style>
 
 <body>
     <section
-        style="height: 100%; width: 100%; padding: 1rem 2rem; display: flex; flex-direction: column;box-sizing: border-box;justify-content: center;">
+        style="height: 10rem; width: 40rem; padding: 1rem 2rem; display: flex; flex-direction: column;box-sizing: border-box;justify-content: center;">
         <div style="display: flex; height: 100%; width: 100%; justify-content: center;align-items: center;">
-            <div style="margin-left: .5rem;">服务器URL：</div>
+            <div style="margin-left: .5rem; width: 6rem;">服务器URL：</div>
             <input id="url_input" style="height: 1rem; flex:1" type="text" value="http://">
+        </div>
+        <div style="display: flex; height: 100%; width: 100%; justify-content: center;align-items: center;">
+            <div style="margin-left: .5rem;width: 6rem;">设备名称: </div>
+            <input id="equipment_name" style="height: 1rem; flex:1" type="text" value="">
         </div>
         <button id="save_button" style="align-self:flex-end; width: 4rem; margin: 1rem 0;">保存</button>
     </section>
