--- a/SyncManagerApi/wwwroot/index.html
+++ b/SyncManagerApi/wwwroot/index.html
@@ -1,1 +1,3 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Document</title><script defer="defer" src="index.923ae9bf.js"></script></head><body><div id="app"></div></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Document</title><script defer="defer" src="index.c7a015dc.js"></script></head><style>body{
+    overflow: hidden;
+  }</style><body><div id="app"></div></body></html>
