--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+<style>
+  body{
+    overflow: hidden;
+  }
+</style>
 <body>
   <div id="app"></div>
 </body>
