--- a/WebExtension/src/pages/popup.html
+++ b/WebExtension/src/pages/popup.html
@@ -8,19 +8,25 @@
   </head>
   <style type="text/css">
     html {
+       margin:0;
+      padding: 0;
+    }
+    body{
+      margin:0;
+      padding: 0;
       width: 600px;
-      height: 500px;
+      height: 400px;
+      overflow: hidden;
     }
   </style>
 
-  <body>
+  <body id="main-body">
     <iframe
-      id="mainFrame"
+      id="main-frame"
       src=""
       frameborder="0"
-      width="600"
-      ,height="500"
-      style="width: 600px; height: 500px"
+      height="200px"
+      style="width: 600px"
     ></iframe>
   </body>
   <script src="common.js"></script>
