--- a/SyncManagerApi/wwwroot/index.html
+++ b/SyncManagerApi/wwwroot/index.html
@@ -1,3 +1,3 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Document</title><script defer="defer" src="index.5a7f4c80.js"></script></head><style>body{
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>BrowserHistorySync</title><script defer="defer" src="index.88a2da67.js"></script></head><style>body {
     overflow: hidden;
   }</style><body><div id="app"></div></body></html>
