--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>BrowserHistorySync</title>
 </head>
 <style>
-  body{
+  body {
     overflow: hidden;
   }
 </style>
+
 <body>
   <div id="app"></div>
 </body>
+
 </html>
