--- a/SyncManagerApi/wwwroot/index.html
+++ b/SyncManagerApi/wwwroot/index.html
@@ -1,3 +1,3 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><link rel="shotcut_icon" href="./favicon.ico"><meta name="viewport" content="width=device-width,initial-scale=1"><title>BrowserHistorySync</title><script defer="defer" src="index.638890cf.js"></script></head><style>body {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><link rel="shotcut_icon" href="./favicon.ico"><meta name="viewport" content="width=device-width,initial-scale=1"><title>BrowserHistorySync</title><script defer="defer" src="/index.1b988aa0.js"></script></head><style>body {
     overflow: hidden;
   }</style><body><div id="app"></div></body></html>
