--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -7,6 +7,7 @@
   <link rel="shotcut_icon" href="./favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BrowserHistorySync</title>
+  <script src="/_setting.js" defer></script>
 </head>
 <style>
   body {
