--- a/SyncManagerApi/wwwroot/index.html
+++ b/SyncManagerApi/wwwroot/index.html
@@ -1,3 +1,3 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><link rel="shotcut_icon" href="./favicon.ico"><meta name="viewport" content="width=device-width,initial-scale=1"><title>BrowserHistorySync</title><script src="/_setting.js" defer="defer"></script><script defer="defer" src="/index.0e0e36db.js"></script></head><style>body {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><title>BrowserHistorySync</title><link rel="shotcut_icon" href="./favicon.ico"><script src="/_setting.js" defer="defer"></script><script defer="defer" src="/index.faf18a50.js"></script></head><style>body {
     overflow: hidden;
   }</style><body><div id="app"></div></body></html>
