feat: Add new opened tab override option

--- a/WebExtension/src/pages/option.html
+++ b/WebExtension/src/pages/option.html
@@ -60,6 +60,10 @@
                     </select>
                     <div class="form-text">新页面打开后，URL稳定不变后再上报访问记录</div>
                 </div>
+                <div class="mb-3  form-check form-switch">
+                    <input class="form-check-input" type="checkbox" role="switch" id="replace_new_opened_tab">
+                    <label class="form-check-label" for="replace_new_opened_tab">替换新开Tab页面</label>
+                </div>
                 <button id="save_button" class="btn btn-primary">Save</button>
             </form>
         </section>
